--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   carousel_slider: ^4.2.1
   qr_flutter: ^4.1.0
   flutter_svg: ^2.0.10+1
+  popover: ^0.3.0
+  firebase_core: ^2.31.0
+  firebase_auth: ^4.19.5
+  cloud_firestore: ^4.17.3
 
 dev_dependencies:
   flutter_test:
