--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_core: ^2.31.0
   firebase_auth: ^4.19.5
   cloud_firestore: ^4.17.3
+  flutter_blue_plus: ^1.32.7
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
