--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,10 +47,21 @@ dependencies:
   flutter_blue_plus: ^1.32.7
   provider: ^6.1.2
   flutter_animate: ^4.5.0
+  flutter_localization: ^0.2.1
+  pixel_perfect: ^1.1.3
+  flutter_screenutil: ^5.9.3
+  image_picker: ^1.1.2
+  firebase_storage: ^11.7.7
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/FilamentizeLogo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
