--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   firebase_storage: ^11.7.7
   flutter_launcher_icons: ^0.13.1
   flame: ^1.17.0
+  audioplayers: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -87,6 +88,7 @@ flutter:
     - images/
     - images/icons/
     - assets/images/
+    - assets/sounds/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
